--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
     <section class="card">
       <h2>Impian & Goals</h2>
       <p>
-        Dulu aku ingin jadi pramugari yang cantik, ramah, dan baik.  
-        Tapi sekarang mimpiku berubah jadi ingin kuliah di ITB jurusan Teknik Informatika  
-        atau Ilmu Komputer di UNPAD/UNAIR ✨  
+        mau jadi miliarder wkwkkw ✨  
       </p>
     </section>
 
@@ -100,4 +98,5 @@
   <!-- JS untuk confetti -->
   <script src="confetti.js"></script>
 </body>
+
 </html>
