--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <h2>Profile</h2>
       <ul class="list">
         <li><strong>Nama:</strong> Nabila Herviati (Via)</li>
-        <li><strong>Tanggal Lahir:</strong> 16 Juli 2008</li>
-        <li><strong>Alamat:</strong> Banjar Rejo, Batanghari, Lampung Timur</li>
+        <li><strong>Tanggal Lahir:</strong> 16 Juli</li>
+        <li><strong>Alamat:</strong> Lampung Timur</li>
         <li><strong>Sekolah:</strong> SMKN 3 Metro</li>
         <li><strong>Jurusan:</strong> Rekayasa Perangkat Lunak</li>
         <li><strong>Kelas:</strong> XI</li>
@@ -100,3 +100,4 @@
 </body>
 
 </html>
+
